--- a/webapp/package.json
+++ b/webapp/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@types/three": "^0.149.0",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4"
   }
 }
